fix(comment): comments via email notification
Github sends emails to users who are subscribed to
notifications. The Gitalk comment behavior should match that of
Github.

The previous behavior does not hide extended email replys.
Often times the email response contains the complete email
chain. The visible email chain confuses the user with
unformatted html strings.

Incorrect comment formatting for email replies. #224

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -420,6 +420,11 @@ $gt-size-avatar-mobi := em(32px)
       right: 0
     &-body
       color: $gt-color-comment-txt !important
+      .email-hidden-reply
+        display: none;
+        white-space: pre-wrap
+      .email-hidden-reply.expanded
+        display: block
     &-admin
       .gt-comment-content
         background-color: $gt-color-comment-adminbg
